// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Cell Props Renders \`as\` prop correctly 1`] = `
<th
  className="brew-TableCell"
>
  Column1
</th>
`;

exports[`Table Cell Props Renders \`as\` prop correctly 2`] = `
<div
  className="brew-TableCell"
>
  Column2
</div>
`;

exports[`Table Cell Renders correctly with component children 1`] = `
<td
  className="brew-TableCell"
>
  <h3
    className="brew-Typography brew-Typography--variant-h3 brew-Typography--color-initial brew-Typography--align-inherit brew-Typography--display-initial"
  >
    Label
  </h3>
</td>
`;

exports[`Table Cell Renders correctly with text children 1`] = `
<td
  className="brew-TableCell"
>
  Column1
</td>
`;
